# personal-finance-display

./: .gitignore  CLAUDE.md  Makefile  brainstorming.md  migrate-data.sh  project-history.md  project-plan.md  server
backend/: Cargo.toml
backend/src/: generate_elm.rs  main.rs  types.rs
frontend/: elm.js  elm.json  index.html  main.js  package-lock.json  package.json
frontend/src/: Calculations.elm  Graph.elm  Main.elm
frontend/src/Api/: Types.elm
frontend/tests/: CalculationsTest.elm
pi-setup/: clear-data.sh  deploy.sh  finance-deploy-watcher.service  finance-display.service  install.sh  launch-kiosk.sh
scraper/: Cargo.toml
scraper/src/: main.rs
server/: server.py
