[package]
name = "finance-server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower-http = { version = "0.5", features = ["fs", "cors"] }
elm_rs = "0.2"

[[bin]]
name = "server"
path = "src/main.rs"

[[bin]]
name = "generate-elm"
path = "src/generate_elm.rs"
